--- a/roles/consul/templates/consul.service.template
+++ b/roles/consul/templates/consul.service.template
@@ -4,7 +4,7 @@ Requires=network-online.target
 After=network-online.target
 
 [Service]
-User=root
+User=vagrant
 EnvironmentFile=-/etc/sysconfig/consul.cfg
 Environment=GOMAXPROCS=2
 Restart=on-failure
